--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # jekyll serve --incremental --host 0.0.0.0
 title: "Iklan Radio Suara Surabaya"
 description: "Perusahaan Jasa Agency Iklan Radio Suara Surabaya Adlibs, Spot, Talk show, Wawancara"
-url: https://brehehe.github.io/iklanradioss
+url: https://iklanradiosuarasurabaya.com
 # url: http://127.0.0.1:4000
 # mainurl: https://brehehe.github.io/iklanradioss/
 # mainurl: http://127.0.0.1:4000
