--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 title: "Iklan Radio Suara Surabaya"
 description: "Perusahaan Jasa Agency Iklan Radio Suara Surabaya Adlibs, Spot, Talk show, Wawancara"
 url: https://iklanradiosuarasurabaya.com
-# url: http://127.0.0.1:4000
+url: http://127.0.0.1:4000
 # mainurl: https://brehehe.github.io/iklanradioss/
 # mainurl: http://127.0.0.1:4000
 loading_teks: Iklan Radio Suara Surabaya
-stylever: 22
+stylever: 23
 
 info_logourl: logo-sbyad.png
 info_logourlpp: pp-logo-sbyad.png
