--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ info_logourlppwht: img/logo/putih/logo-sby-ad-putih-500.png
 #info_email: marketing.surabaya_ad@yahoo.com
 info_email: info@surabaya-ad.com
 info_whatsapp: 081234 800 77
+info_tel: "tel:08123480077"
 info_nomor: 031-5611808
 info_alamat: "Jl. Kencanasari Timur XV/6 Surabaya Jawa Timur 60224"
 info_tel1: 031-5611808
