--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,25 @@ paket_iklan:
    u: suara-surabaya-she-radio
    tm: Suara Surabaya & SHE Radio
 
+facebook: https://www.facebook.com/Pasang-Iklan-Radio-Suara-Surabaya-149523209213232/
+twitter: 
+  username: Surabaya_Ad
+
+social:
+  name: Surabaya AD
+  links:
+    - https://www.facebook.com/Pasang-Iklan-Radio-Suara-Surabaya-149523209213232/
+    - https://twitter.com/Surabaya_Ad
+    - https://www.instagram.com/surabayaad/
+    - https://plus.google.com/u/2/113355031675278304715
+
+author:
+  twitter: Surabaya_Ad
+  facebook: surabayaad
+  instagram: surabayaad
+
+lang: id_ID
+
 plugins:
   - jekyll-avatar
   - jekyll-redirect-from
