--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ info_logourlpp: pp-logo-sbyad.png
 info_logourlppwht: img/logo/putih/logo-sby-ad-putih-500.png
 #info_email: marketing.surabaya_ad@yahoo.com
 info_email: info@surabaya-ad.com
-info_whatsapp: 081234 800 77
+info_whatsapp: 08123480077
+info_whatsapp2: 0818310004
 info_tel: "tel:08123480077"
 info_nomor: 031-5611808
 info_alamat: "Jl. Kencanasari Timur XV/6 Surabaya Jawa Timur 60224"
